--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@
   .header {
     padding: 80px;
     text-align: center;
-    background: #1abc9c;
-    color: white;
+    background: #ce4a4a;
+    color: rgb(0, 0, 0);
   }
   
   /* Increase the font size of the heading */
@@ -24,7 +24,7 @@
   /* Sticky navbar - toggles between relative and fixed, depending on the scroll position. It is positioned relative until a given offset position is met in the viewport - then it "sticks" in place (like position:fixed). The sticky value is not supported in IE or Edge 15 and earlier versions. However, for these versions the navbar will inherit default position */
   .navbar {
     overflow: hidden;
-    background-color: #333;
+    background-color: rgb(176, 72, 72);
     position: sticky;
     position: -webkit-sticky;
     top: 0;
